--- a/travel.html
+++ b/travel.html
@@ -28,7 +28,7 @@
     <ul>
       <li><a class="active" href="#">Home</a></li>
       <li><a href="#">Destinations</a></li>
-      <li><a href="#">Hotels</a></li>
+      <li><a href="hotels.html">Hotels</a></li>
       <li><a href="#">Travelogues</a></li>
 
     </ul>
