--- a/travel.html
+++ b/travel.html
@@ -26,9 +26,9 @@
     </label>
     <label class="logo"><i class="fas fa-plane-departure"></i>TRAVEL INDIA </label>
     <ul>
-      <li><a class="active" href="#">Home</a></li>
+      <li><a class="active" href="https://bharti-kumath.github.io/travel/travel.html">Home</a></li>
       <li><a href="#">Destinations</a></li>
-      <li><a href="hotels.html">Hotels</a></li>
+      <li><a href="https://bharti-kumath.github.io/travel/hotels.html" >Hotels</a></li>
       <li><a href="#">Travelogues</a></li>
 
     </ul>
