--- a/hotels.html
+++ b/hotels.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
 
-    <link rel="stylesheet" href="hot.css">
+    <link rel="stylesheet" href="hotels.css">
 
 </head>
 
